--- a/index.html
+++ b/index.html
@@ -14,18 +14,19 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="Um gerador de conversas no Whatsapp">
+  <meta name="description" content="Um gerador de link e conversas do Whatsapp.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="gerador_conversas">
+  <meta name="apple-mobile-web-app-title" content="WhatsLink">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon"/>
 
-  <title>gerador_conversas</title>
+  <title>WhatsLink</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
@@ -35,7 +36,7 @@
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('flutter-first-frame', function () {
-        navigator.serviceWorker.register('flutter_service_worker.js?v=1337183910');
+        navigator.serviceWorker.register('flutter_service_worker.js?v=3822452903');
       });
     }
   </script>
